# ic_counter

./: .gitignore  Cargo.toml  README.md  build.sh  dfx.json  package-lock.json  package.json  webpack.config.js
src/counter/: Cargo.toml  lib.rs
src/declarations/counter/: counter.did  counter.did.d.ts  counter.did.js
src/declarations/showCounter_assets/: index.js
src/showCounter_assets/assets/: main.css
src/showCounter_assets/src/: App.svelte  index.html  index.js
