[package]
name = "counter"
version = "0.1.0"
authors = ["Sue Ann Kim <sue.ann.kim@dfinity.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.3.2"
ic-cdk-macros = "0.3.2"
lazy_static = "1.4.0"